# web_scraper_agendades

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SECURITY_GUIDELINES.md  _preview_turismo_detail.html  _preview_turismo_murcia.html  _preview_visitpalma.html  _preview_visitvalencia.html  _preview_visitvalencia_agenda.html  _preview_viveceuta.html  andalucia.json  backfill_source_id.py  cruzroja_sample.html  datos_gob.json  datos_gob_full.json  entrypoint.sh  fix_ccaa_locations.py  fuentes_categoria_sanitaria  fuentes_categoria_social  fuentes_categoria_tecnoligica.md  insert_gold_20.py  insert_gold_events.py  nuevas_fuentes.txt  preview_html.py  pyproject.toml  pytest.ini  requirements.txt  run_batch.py  run_madrid_100.py  screenshot_demo.html  test_full_pipeline.py  test_quality.py  test_unsplash.py  test_valencia.py
data/: AGENDAS CULTURALES.xlsx  SUPABASE_SCHEMA_COMPLETO_AGENDADES.sql  mallorca_eventos.html  seed-full-event.mjs
data/cache/: category_embeddings.json
docs/: ARQUITECTURA_DEFINITIVA.md  COBERTURA_FUENTES.md  FUENTES_DATOS.md  PIRAMIDE_DATOS.md  comandos_insercion.md  fuentes_pendientes.md  viralagenda_fuentes.md
docs/plans/: 2026-02-11-scraper-dashboard-design.md
docs/progreso/: 01_cobertura_ccaa.md  02_calidad_datos.md  03_fuentes_pendientes.md  2026-02-03_aragon_completado.md  leyenda.md  sesion_2026-02-03.md
output/: madrid_sample.json
scripts/: backfill_categories.py  batch_viralagenda.py  preview_events.py  run_bronze.py  run_pipeline.py  test_200_events.py  test_insert_all.py
sql/: add_registration_info.sql  create_event_source_contributions.sql  estructura_bdd.sql  insert_all_viralagenda_sources.sql  insert_andalucia_viralagenda_sources.sql  insert_badajoz_source.sql  insert_canarias_sources.sql  insert_cantabria_source.sql  insert_cyl_viralagenda_sources.sql  insert_gold_sources.sql  insert_huesca_source.sql  insert_larioja_source.sql  insert_navarra_sources.sql  insert_teruel_source.sql  insert_viralagenda_new_ccaas.sql  insert_zaragoza_source.sql  schema.sql
src/: __init__.py  main.py
src/adapters/: __init__.py  (+5 more)
tests/: __init__.py  conftest.py  test_adapters.py  test_category_classification.py  test_cross_source_dedup.py  test_date_formats.py  test_external_ids.py  test_field_coverage.py  test_pipeline.py  test_pipeline_unit.py  test_plata_quality.py
(+162 files in other folders)
